--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,6 +11,7 @@ body{
     font-family: sans-serif;
     min-height: 100vh;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     background-color: #34495e;
@@ -22,6 +23,7 @@ body{
         background-color: #191919;
         padding: 40px;
         text-align: center;
+        margin: 20px 20px 0px 20px;
 
         h1{
             color: white;
@@ -58,6 +60,25 @@ body{
 
             &:hover{
                 background: $neon-green;
+            }
+        }
+    }
+
+    footer{
+        width: 400px;
+        max-width: 100%;
+        text-align: center;
+        margin: 0;
+
+        .svg{            
+            width: 20%;
+            min-width: 65px;
+            margin: 0px auto;
+            margin-bottom: -6px;
+            transition: 0.25s;
+
+            &:hover{
+                fill: $neon-green;
             }
         }
     }
