--- a/scss/main.scss
+++ b/scss/main.scss
@@ -46,8 +46,17 @@ body{
             transition: 0.25s;
 
             &:focus{
-                width: 100%;
-                border-color: $neon-green;
+                border: 0;
+                background: none;            
+                display: block;
+                text-align: center;
+                border: 2px solid $neon-green;
+                margin: 20px auto;
+                padding: 14px 40px;
+                outline: none;
+                color: white;
+                border-radius: 24px;
+                transition: 0.25s;
             }
         }
 
@@ -61,6 +70,14 @@ body{
             &:hover{
                 background: $neon-green;
             }
+        }
+
+        input:-webkit-autofill,
+        input:-webkit-autofill:hover,
+        input:-webkit-autofill:focus,
+        input:-webkit-autofill:active {
+            transition: background-color 5500s ease-in-out 0s;
+            -webkit-text-fill-color: white !important;
         }
     }
 
