--- a/scss/main.scss
+++ b/scss/main.scss
@@ -46,26 +46,23 @@ body{
             transition: 0.25s;
 
             &:focus{
-                border: 0;
-                background: none;            
-                display: block;
-                text-align: center;
-                border: 2px solid $neon-green;
-                margin: 20px auto;
-                padding: 14px 40px;
-                outline: none;
-                color: white;
-                border-radius: 24px;
-                transition: 0.25s;
+                width: 100%;
+                border-color: $neon-green;
             }
         }
 
         button{
-            @extend input;
-
+            border: 0;
+            background: none;            
+            display: block;
+            text-align: center;
+            border: 2px solid $neon-green;
+            margin: 20px auto;
             padding: 14px 40px;
-            width: initial;
-            border-color:  $neon-green;
+            outline: none;
+            color: white;
+            border-radius: 24px;
+            transition: 0.25s;
 
             &:hover{
                 background: $neon-green;
